# ML2

./: README.md  Taller1.ipynb  Taller1.py  pyproject.toml  task1.py  task11.html  task11.py  task2.py  task3.py  task4.py  task5.py  task6.py  task7.py  task8.py
foto/: foto.py
foto/fotos/: cara_promedio.py
unsupervised/base/: __init__.py  base.py
unsupervised/dim_red/: t_sne.py
unsupervised/t_sne/: t_sne.py
